--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.6",
+    "chart.js": "^3.4.1",
     "firebase": "^8.7.0",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
