--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.16.6",
     "chart.js": "^3.4.1",
     "firebase": "^8.7.0",
+    "howler": "^2.2.3",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/howler": "^2.2.3",
     "@types/node-sass": "^4.11.1",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "9",
