--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@clerk/clerk-react": "^2.4.0",
-    "@craco/craco": "^6.4.3",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.1",
@@ -19,19 +18,18 @@
     "firebase": "^9.6.1",
     "howler": "^2.2.3",
     "moment": "^2.29.1",
-    "node-sass": "7.0.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "next",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,11 +51,12 @@
     ]
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.2",
     "@types/howler": "^2.2.4",
+    "@types/node-sass": "^4.11.2",
     "@types/react-router-dom": "^5.3.2",
-    "autoprefixer": "10",
-    "postcss": "8",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "sass": "^1.45.0",
+    "tailwindcss": "^3.0.2"
   }
 }
